# yolo_demo

./: README.md  install_ros_kinetic.sh
audio_common/sound_play/scripts/: say.py  soundplay_node2.py
audio_common/sound_play/test/: test.cpp  test_backup.cpp
darknet_ros/darknet_ros/include/darknet_ros/: YoloObjectDetector.hpp
darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
image_transport/image_transport_tutorial/: CMakeLists.txt
image_transport/image_transport_tutorial/src/: my_publisher.cpp  my_publisher2.cpp
my_dynamixel_sdk_tutorial/: CMakeLists.txt  package.xml
my_dynamixel_sdk_tutorial/src/: read_write.cpp
object_reader/: CMakeLists.txt  package.xml
object_reader/launch/: object_reader.launch
object_reader/src/: object_reader.cpp
robot_controller/: CMakeLists.txt  package.xml
robot_controller/src/: robot_controller.cpp
